[package]
name = "aplis"
version = "0.1.0"
authors = ["Ellis Kesterton <ellis@diagnosticbox.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = "0.8"
x86_64 = "=0.14.0"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
spin = "0.9"
cpuio = "0.3"
pic8259_simple = "0.2.0"
